--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.13.5",
     "dayjs": "^1.11.19",
+    "konva": "^10.2.0",
     "lucide-react": "^0.575.0",
     "react": "^19.2.0",
     "react-datepicker": "^9.1.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.71.1",
+    "react-konva": "^19.2.2",
     "react-router-dom": "^7.13.0",
+    "react-signature-canvas": "^1.1.0-alpha.2",
     "tailwindcss": "^4.1.18",
     "zod": "^4.3.6",
     "zustand": "^5.0.11"
